testsuite/tests/overloadedrecflds/should_fail/T23010_fail_aux.hs
{-# LANGUAGE DuplicateRecordFields #-}

module T23010_fail_aux where

import {-# SOURCE #-} T23010_fail ( fld )

data X
bar = fld
